--- a/train/train.ipynb
+++ b/train/train.ipynb
@@ -438,6 +438,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (5, 19)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>ID</th><th>oof_x_0</th><th>oof_y_0</th><th>oof_z_0</th><th>oof_x_1</th><th>oof_y_1</th><th>oof_z_1</th><th>oof_x_2</th><th>oof_y_2</th><th>oof_z_2</th><th>oof_x_3</th><th>oof_y_3</th><th>oof_z_3</th><th>oof_x_4</th><th>oof_y_4</th><th>oof_z_4</th><th>oof_x_5</th><th>oof_y_5</th><th>oof_z_5</th></tr><tr><td>str</td><td>f32</td><td>f32</td><td>f32</td><td>f32</td><td>f32</td><td>f32</td><td>f32</td><td>f32</td><td>f32</td><td>f32</td><td>f32</td><td>f32</td><td>f32</td><td>f32</td><td>f32</td><td>f32</td><td>f32</td><td>f32</td></tr></thead><tbody><tr><td>&quot;00066be8e20318869c38c66be46663…</td><td>2.762264</td><td>0.010862</td><td>0.013727</td><td>6.096496</td><td>-0.012793</td><td>0.019767</td><td>9.38352</td><td>-0.035619</td><td>0.045556</td><td>12.97892</td><td>-0.036059</td><td>0.099674</td><td>16.085865</td><td>-0.099191</td><td>0.120864</td><td>20.582144</td><td>-0.221634</td><td>0.122029</td></tr><tr><td>&quot;00066be8e20318869c38c66be46663…</td><td>4.908346</td><td>-0.042589</td><td>0.008057</td><td>10.523609</td><td>-0.14577</td><td>0.019354</td><td>16.052059</td><td>-0.368332</td><td>0.047004</td><td>21.243311</td><td>-0.522213</td><td>0.032412</td><td>26.953341</td><td>-0.61742</td><td>0.055536</td><td>31.226437</td><td>-1.040025</td><td>0.084744</td></tr><tr><td>&quot;00066be8e20318869c38c66be46663…</td><td>4.748171</td><td>0.013953</td><td>0.028808</td><td>9.974693</td><td>-0.015439</td><td>0.03645</td><td>15.481208</td><td>-0.073113</td><td>0.065858</td><td>20.798096</td><td>-0.127491</td><td>0.058521</td><td>26.01053</td><td>-0.200581</td><td>0.053548</td><td>32.267723</td><td>-0.195666</td><td>0.055094</td></tr><tr><td>&quot;000fb056f97572d384bae4f5fc1e0f…</td><td>2.765885</td><td>-0.001663</td><td>-0.031498</td><td>6.058972</td><td>0.116818</td><td>-0.008219</td><td>8.761226</td><td>0.333205</td><td>-0.058305</td><td>11.390756</td><td>0.617979</td><td>-0.036776</td><td>15.144131</td><td>0.981722</td><td>-0.067624</td><td>17.172825</td><td>1.368344</td><td>-0.057977</td></tr><tr><td>&quot;000fb056f97572d384bae4f5fc1e0f…</td><td>1.674614</td><td>-0.063675</td><td>0.008017</td><td>3.675838</td><td>-0.183655</td><td>0.04087</td><td>6.335231</td><td>-0.390689</td><td>0.047238</td><td>9.539189</td><td>-0.528087</td><td>0.079369</td><td>12.862332</td><td>-0.801395</td><td>0.155044</td><td>15.00661</td><td>-0.825621</td><td>0.121842</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (5, 19)\n",
+       "┌───────────┬──────────┬───────────┬───────────┬───┬───────────┬───────────┬───────────┬───────────┐\n",
+       "│ ID        ┆ oof_x_0  ┆ oof_y_0   ┆ oof_z_0   ┆ … ┆ oof_z_4   ┆ oof_x_5   ┆ oof_y_5   ┆ oof_z_5   │\n",
+       "│ ---       ┆ ---      ┆ ---       ┆ ---       ┆   ┆ ---       ┆ ---       ┆ ---       ┆ ---       │\n",
+       "│ str       ┆ f32      ┆ f32       ┆ f32       ┆   ┆ f32       ┆ f32       ┆ f32       ┆ f32       │\n",
+       "╞═══════════╪══════════╪═══════════╪═══════════╪═══╪═══════════╪═══════════╪═══════════╪═══════════╡\n",
+       "│ 00066be8e ┆ 2.762264 ┆ 0.010862  ┆ 0.013727  ┆ … ┆ 0.120864  ┆ 20.582144 ┆ -0.221634 ┆ 0.122029  │\n",
+       "│ 20318869c ┆          ┆           ┆           ┆   ┆           ┆           ┆           ┆           │\n",
+       "│ 38c66be46 ┆          ┆           ┆           ┆   ┆           ┆           ┆           ┆           │\n",
+       "│ 663…      ┆          ┆           ┆           ┆   ┆           ┆           ┆           ┆           │\n",
+       "│ 00066be8e ┆ 4.908346 ┆ -0.042589 ┆ 0.008057  ┆ … ┆ 0.055536  ┆ 31.226437 ┆ -1.040025 ┆ 0.084744  │\n",
+       "│ 20318869c ┆          ┆           ┆           ┆   ┆           ┆           ┆           ┆           │\n",
+       "│ 38c66be46 ┆          ┆           ┆           ┆   ┆           ┆           ┆           ┆           │\n",
+       "│ 663…      ┆          ┆           ┆           ┆   ┆           ┆           ┆           ┆           │\n",
+       "│ 00066be8e ┆ 4.748171 ┆ 0.013953  ┆ 0.028808  ┆ … ┆ 0.053548  ┆ 32.267723 ┆ -0.195666 ┆ 0.055094  │\n",
+       "│ 20318869c ┆          ┆           ┆           ┆   ┆           ┆           ┆           ┆           │\n",
+       "│ 38c66be46 ┆          ┆           ┆           ┆   ┆           ┆           ┆           ┆           │\n",
+       "│ 663…      ┆          ┆           ┆           ┆   ┆           ┆           ┆           ┆           │\n",
+       "│ 000fb056f ┆ 2.765885 ┆ -0.001663 ┆ -0.031498 ┆ … ┆ -0.067624 ┆ 17.172825 ┆ 1.368344  ┆ -0.057977 │\n",
+       "│ 97572d384 ┆          ┆           ┆           ┆   ┆           ┆           ┆           ┆           │\n",
+       "│ bae4f5fc1 ┆          ┆           ┆           ┆   ┆           ┆           ┆           ┆           │\n",
+       "│ e0f…      ┆          ┆           ┆           ┆   ┆           ┆           ┆           ┆           │\n",
+       "│ 000fb056f ┆ 1.674614 ┆ -0.063675 ┆ 0.008017  ┆ … ┆ 0.155044  ┆ 15.00661  ┆ -0.825621 ┆ 0.121842  │\n",
+       "│ 97572d384 ┆          ┆           ┆           ┆   ┆           ┆           ┆           ┆           │\n",
+       "│ bae4f5fc1 ┆          ┆           ┆           ┆   ┆           ┆           ┆           ┆           │\n",
+       "│ e0f…      ┆          ┆           ┆           ┆   ┆           ┆           ┆           ┆           │\n",
+       "└───────────┴──────────┴───────────┴───────────┴───┴───────────┴───────────┴───────────┴───────────┘"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rev_dict = {v: \"oof_\" + k for k, v in CATEGORY_MAPPING[\"target_name\"].items()}\n",
+    "oof_df = (\n",
+    "    train.select([\"ID\", \"target_name\", \"oof\"])\n",
+    "    .with_columns(pl.col(\"target_name\").replace_strict(rev_dict))\n",
+    "    .pivot(index=\"ID\", columns=\"target_name\", values=\"oof\")\n",
+    ")\n",
+    "oof_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oof_df.write_csv(os.path.join(CFG[\"output_dir\"], \"oof.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
