--- a/vis/visualize.ipynb
+++ b/vis/visualize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 1/43371 [00:00<2:05:08,  5.78it/s]"
+      "  0%|          | 1/43371 [00:00<2:19:27,  5.18it/s]"
      ]
     },
     {
@@ -228,7 +228,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 2/43371 [00:00<1:38:36,  7.33it/s]"
+      "  0%|          | 2/43371 [00:00<1:47:12,  6.74it/s]"
      ]
     },
     {
@@ -245,7 +245,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 60%|█████▉    | 26020/43371 [32:02<21:17, 13.58it/s]   "
+      "  2%|▏         | 1001/43371 [01:15<53:01, 13.32it/s] \n"
      ]
     }
    ],
@@ -270,7 +270,10 @@
     "        intrinsic_matrix,\n",
     "        save_path=f\"{EXP_DIR}/vis/{sample_id}.png\",\n",
     "        plot=i < 3,\n",
-    "    )"
+    "    )\n",
+    "\n",
+    "    if i > 1000:\n",
+    "        break"
    ]
   },
   {
