--- a/notebook/eda_overview.ipynb
+++ b/notebook/eda_overview.ipynb
@@ -169,17 +169,20 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (4,)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>gearShifter</th></tr><tr><td>str</td></tr></thead><tbody><tr><td>&quot;park&quot;</td></tr><tr><td>&quot;neutral&quot;</td></tr><tr><td>&quot;drive&quot;</td></tr><tr><td>&quot;reverse&quot;</td></tr></tbody></table></div>"
+       "<small>shape: (4, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>gearShifter</th><th>count</th></tr><tr><td>str</td><td>u32</td></tr></thead><tbody><tr><td>&quot;park&quot;</td><td>115</td></tr><tr><td>&quot;drive&quot;</td><td>43251</td></tr><tr><td>&quot;reverse&quot;</td><td>2</td></tr><tr><td>&quot;neutral&quot;</td><td>3</td></tr></tbody></table></div>"
       ],
       "text/plain": [
-       "shape: (4,)\n",
-       "Series: 'gearShifter' [str]\n",
-       "[\n",
-       "\t\"park\"\n",
-       "\t\"neutral\"\n",
-       "\t\"drive\"\n",
-       "\t\"reverse\"\n",
-       "]"
+       "shape: (4, 2)\n",
+       "┌─────────────┬───────┐\n",
+       "│ gearShifter ┆ count │\n",
+       "│ ---         ┆ ---   │\n",
+       "│ str         ┆ u32   │\n",
+       "╞═════════════╪═══════╡\n",
+       "│ park        ┆ 115   │\n",
+       "│ drive       ┆ 43251 │\n",
+       "│ reverse     ┆ 2     │\n",
+       "│ neutral     ┆ 3     │\n",
+       "└─────────────┴───────┘"
       ]
      },
      "execution_count": 4,
@@ -188,7 +191,7 @@
     }
    ],
    "source": [
-    "train[\"gearShifter\"].unique()"
+    "train[\"gearShifter\"].value_counts()"
    ]
   },
   {
