[exp006] xgb, tune lag window [cv: 0.2180]

--- a/train/ensemble.ipynb
+++ b/train/ensemble.ipynb
@@ -41,8 +41,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-11-16 08:40:06.579285: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-11-16 08:40:06.605473: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-11-16 09:45:02.447321: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-11-16 09:45:02.474315: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
@@ -61,9 +61,48 @@
       "  pid, fd = os.forkpty()\n",
       "set seed: 46\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'cnn': {'execution': {'best_exp_id': 'exp_003',\n",
+      "                       'exp_id': 'exp_003',\n",
+      "                       'seed': 46},\n",
+      "         'optimizer': {'lr': 0.01},\n",
+      "         'trainer': {'device': 'cuda',\n",
+      "                     'direction': 'minimize',\n",
+      "                     'es_patience': 20,\n",
+      "                     'loss_window': 100000,\n",
+      "                     'max_epoch': 20,\n",
+      "                     'monitor': 'valid_MeanAbsoluteError'}},\n",
+      " 'dataset': {'competition_dir': '/kaggle/input/atmaCup#18_dataset',\n",
+      "             'train_fold_path': '/kaggle/input/cv-split/train_folds.csv'},\n",
+      " 'ensemble': {'execution': {'best_exp_id': 'ensemble_001',\n",
+      "                            'exp_id': 'ensemble_001',\n",
+      "                            'seed': 46},\n",
+      "              'weights': {'cnn': 0.5, 'xgboost': 0.5}},\n",
+      " 'output_dir': '/kaggle/output/ensemble_001',\n",
+      " 'wandb': {'project': 'atmaCup18'},\n",
+      " 'xgboost': {'execution': {'best_exp_id': 'exp_005',\n",
+      "                           'exp_id': 'exp_005',\n",
+      "                           'seed': 46},\n",
+      "             'params': {'colsample_bytree': 0.7,\n",
+      "                        'learning_rate': 0.025,\n",
+      "                        'max_depth': 7,\n",
+      "                        'n_estimators': 40000,\n",
+      "                        'objective': 'reg:absoluteerror',\n",
+      "                        'random_state': 46,\n",
+      "                        'reg_alpha': 0.1,\n",
+      "                        'reg_lambda': 0.1,\n",
+      "                        'subsample': 1.0,\n",
+      "                        'tree_method': 'gpu_hist'}}}\n"
+     ]
     }
    ],
    "source": [
+    "from pprint import pprint\n",
+    "\n",
     "import yaml\n",
     "from penguinml.utils.logger import get_logger, init_logger\n",
     "from penguinml.utils.set_seed import seed_base\n",
@@ -77,7 +116,9 @@
     "\n",
     "init_logger(f\"{ CFG[MODEL_NAME]['execution']['exp_id']}.log\")\n",
     "logger = get_logger(\"main\")\n",
-    "seed_base(CFG[MODEL_NAME][\"execution\"][\"seed\"])"
+    "seed_base(CFG[MODEL_NAME][\"execution\"][\"seed\"])\n",
+    "\n",
+    "pprint(CFG)"
    ]
   },
   {
@@ -122,7 +163,7 @@
    "outputs": [],
    "source": [
     "oof = oof_xgb.clone()\n",
-    "oof = oof.with_columns([oof_xgb[\"oof_\" + c] * 0.5 + oof_cnn[\"oof_\" + c] * 0.5 for c in TARGET_COLS])"
+    "oof = oof.with_columns([oof_xgb[\"oof_\" + c] * 0.7 + oof_cnn[\"oof_\" + c] * 0.3 for c in TARGET_COLS])"
    ]
   },
   {
@@ -133,7 +174,7 @@
     {
      "data": {
       "text/plain": [
-       "0.21841772517451416"
+       "0.20898397133028224"
       ]
      },
      "execution_count": 8,
