--- a/train/lightgbm.ipynb
+++ b/train/lightgbm.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (18, 7)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>target</th><th>cv</th><th>fold0</th><th>fold1</th><th>fold2</th><th>fold3</th><th>fold4</th></tr><tr><td>str</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>&quot;x_5&quot;</td><td>0.690449</td><td>0.682297</td><td>0.699715</td><td>0.688853</td><td>0.682781</td><td>0.6986</td></tr><tr><td>&quot;y_5&quot;</td><td>0.483314</td><td>0.466744</td><td>0.484508</td><td>0.485832</td><td>0.479718</td><td>0.49977</td></tr><tr><td>&quot;z_5&quot;</td><td>0.178187</td><td>0.177243</td><td>0.174483</td><td>0.178122</td><td>0.182591</td><td>0.178494</td></tr><tr><td>&quot;x_4&quot;</td><td>0.513969</td><td>0.505727</td><td>0.519416</td><td>0.514782</td><td>0.51125</td><td>0.518673</td></tr><tr><td>&quot;y_4&quot;</td><td>0.334225</td><td>0.323633</td><td>0.33419</td><td>0.337008</td><td>0.332366</td><td>0.343928</td></tr><tr><td>&quot;z_4&quot;</td><td>0.14516</td><td>0.143788</td><td>0.141738</td><td>0.145386</td><td>0.149358</td><td>0.145529</td></tr><tr><td>&quot;x_3&quot;</td><td>0.360112</td><td>0.356194</td><td>0.364038</td><td>0.360692</td><td>0.353767</td><td>0.365868</td></tr><tr><td>&quot;y_3&quot;</td><td>0.217331</td><td>0.212352</td><td>0.216447</td><td>0.219276</td><td>0.21536</td><td>0.22322</td></tr><tr><td>&quot;z_3&quot;</td><td>0.113452</td><td>0.112329</td><td>0.110431</td><td>0.113916</td><td>0.116881</td><td>0.113704</td></tr><tr><td>&quot;x_2&quot;</td><td>0.232062</td><td>0.229925</td><td>0.230675</td><td>0.232332</td><td>0.229519</td><td>0.237857</td></tr><tr><td>&quot;y_2&quot;</td><td>0.131989</td><td>0.129664</td><td>0.129739</td><td>0.133781</td><td>0.131383</td><td>0.13538</td></tr><tr><td>&quot;z_2&quot;</td><td>0.083025</td><td>0.082469</td><td>0.080717</td><td>0.083646</td><td>0.085575</td><td>0.082716</td></tr><tr><td>&quot;x_1&quot;</td><td>0.137001</td><td>0.135529</td><td>0.135043</td><td>0.138745</td><td>0.136518</td><td>0.139172</td></tr><tr><td>&quot;y_1&quot;</td><td>0.073227</td><td>0.072919</td><td>0.07085</td><td>0.074316</td><td>0.072983</td><td>0.07507</td></tr><tr><td>&quot;z_1&quot;</td><td>0.053841</td><td>0.053643</td><td>0.052526</td><td>0.054284</td><td>0.055234</td><td>0.053517</td></tr><tr><td>&quot;x_0&quot;</td><td>0.063883</td><td>0.063559</td><td>0.062202</td><td>0.065506</td><td>0.063717</td><td>0.064429</td></tr><tr><td>&quot;y_0&quot;</td><td>0.032201</td><td>0.031942</td><td>0.031407</td><td>0.032722</td><td>0.031838</td><td>0.033096</td></tr><tr><td>&quot;z_0&quot;</td><td>0.025885</td><td>0.02575</td><td>0.02534</td><td>0.026307</td><td>0.026417</td><td>0.025612</td></tr></tbody></table></div>"
+       "<small>shape: (18, 7)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>target</th><th>cv</th><th>fold0</th><th>fold1</th><th>fold2</th><th>fold3</th><th>fold4</th></tr><tr><td>str</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>&quot;x_0&quot;</td><td>0.063883</td><td>0.063559</td><td>0.062202</td><td>0.065506</td><td>0.063717</td><td>0.064429</td></tr><tr><td>&quot;x_1&quot;</td><td>0.137001</td><td>0.135529</td><td>0.135043</td><td>0.138745</td><td>0.136518</td><td>0.139172</td></tr><tr><td>&quot;x_2&quot;</td><td>0.232062</td><td>0.229925</td><td>0.230675</td><td>0.232332</td><td>0.229519</td><td>0.237857</td></tr><tr><td>&quot;x_3&quot;</td><td>0.360112</td><td>0.356194</td><td>0.364038</td><td>0.360692</td><td>0.353767</td><td>0.365868</td></tr><tr><td>&quot;x_4&quot;</td><td>0.513969</td><td>0.505727</td><td>0.519416</td><td>0.514782</td><td>0.51125</td><td>0.518673</td></tr><tr><td>&quot;x_5&quot;</td><td>0.690449</td><td>0.682297</td><td>0.699715</td><td>0.688853</td><td>0.682781</td><td>0.6986</td></tr><tr><td>&quot;y_0&quot;</td><td>0.032201</td><td>0.031942</td><td>0.031407</td><td>0.032722</td><td>0.031838</td><td>0.033096</td></tr><tr><td>&quot;y_1&quot;</td><td>0.073227</td><td>0.072919</td><td>0.07085</td><td>0.074316</td><td>0.072983</td><td>0.07507</td></tr><tr><td>&quot;y_2&quot;</td><td>0.131989</td><td>0.129664</td><td>0.129739</td><td>0.133781</td><td>0.131383</td><td>0.13538</td></tr><tr><td>&quot;y_3&quot;</td><td>0.217331</td><td>0.212352</td><td>0.216447</td><td>0.219276</td><td>0.21536</td><td>0.22322</td></tr><tr><td>&quot;y_4&quot;</td><td>0.334225</td><td>0.323633</td><td>0.33419</td><td>0.337008</td><td>0.332366</td><td>0.343928</td></tr><tr><td>&quot;y_5&quot;</td><td>0.483314</td><td>0.466744</td><td>0.484508</td><td>0.485832</td><td>0.479718</td><td>0.49977</td></tr><tr><td>&quot;z_0&quot;</td><td>0.025885</td><td>0.02575</td><td>0.02534</td><td>0.026307</td><td>0.026417</td><td>0.025612</td></tr><tr><td>&quot;z_1&quot;</td><td>0.053841</td><td>0.053643</td><td>0.052526</td><td>0.054284</td><td>0.055234</td><td>0.053517</td></tr><tr><td>&quot;z_2&quot;</td><td>0.083025</td><td>0.082469</td><td>0.080717</td><td>0.083646</td><td>0.085575</td><td>0.082716</td></tr><tr><td>&quot;z_3&quot;</td><td>0.113452</td><td>0.112329</td><td>0.110431</td><td>0.113916</td><td>0.116881</td><td>0.113704</td></tr><tr><td>&quot;z_4&quot;</td><td>0.14516</td><td>0.143788</td><td>0.141738</td><td>0.145386</td><td>0.149358</td><td>0.145529</td></tr><tr><td>&quot;z_5&quot;</td><td>0.178187</td><td>0.177243</td><td>0.174483</td><td>0.178122</td><td>0.182591</td><td>0.178494</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (18, 7)\n",
@@ -215,24 +215,24 @@
        "│ ---    ┆ ---      ┆ ---      ┆ ---      ┆ ---      ┆ ---      ┆ ---      │\n",
        "│ str    ┆ f64      ┆ f64      ┆ f64      ┆ f64      ┆ f64      ┆ f64      │\n",
        "╞════════╪══════════╪══════════╪══════════╪══════════╪══════════╪══════════╡\n",
-       "│ x_5    ┆ 0.690449 ┆ 0.682297 ┆ 0.699715 ┆ 0.688853 ┆ 0.682781 ┆ 0.6986   │\n",
-       "│ y_5    ┆ 0.483314 ┆ 0.466744 ┆ 0.484508 ┆ 0.485832 ┆ 0.479718 ┆ 0.49977  │\n",
-       "│ z_5    ┆ 0.178187 ┆ 0.177243 ┆ 0.174483 ┆ 0.178122 ┆ 0.182591 ┆ 0.178494 │\n",
-       "│ x_4    ┆ 0.513969 ┆ 0.505727 ┆ 0.519416 ┆ 0.514782 ┆ 0.51125  ┆ 0.518673 │\n",
-       "│ y_4    ┆ 0.334225 ┆ 0.323633 ┆ 0.33419  ┆ 0.337008 ┆ 0.332366 ┆ 0.343928 │\n",
-       "│ z_4    ┆ 0.14516  ┆ 0.143788 ┆ 0.141738 ┆ 0.145386 ┆ 0.149358 ┆ 0.145529 │\n",
-       "│ x_3    ┆ 0.360112 ┆ 0.356194 ┆ 0.364038 ┆ 0.360692 ┆ 0.353767 ┆ 0.365868 │\n",
-       "│ y_3    ┆ 0.217331 ┆ 0.212352 ┆ 0.216447 ┆ 0.219276 ┆ 0.21536  ┆ 0.22322  │\n",
-       "│ z_3    ┆ 0.113452 ┆ 0.112329 ┆ 0.110431 ┆ 0.113916 ┆ 0.116881 ┆ 0.113704 │\n",
-       "│ x_2    ┆ 0.232062 ┆ 0.229925 ┆ 0.230675 ┆ 0.232332 ┆ 0.229519 ┆ 0.237857 │\n",
-       "│ y_2    ┆ 0.131989 ┆ 0.129664 ┆ 0.129739 ┆ 0.133781 ┆ 0.131383 ┆ 0.13538  │\n",
-       "│ z_2    ┆ 0.083025 ┆ 0.082469 ┆ 0.080717 ┆ 0.083646 ┆ 0.085575 ┆ 0.082716 │\n",
-       "│ x_1    ┆ 0.137001 ┆ 0.135529 ┆ 0.135043 ┆ 0.138745 ┆ 0.136518 ┆ 0.139172 │\n",
-       "│ y_1    ┆ 0.073227 ┆ 0.072919 ┆ 0.07085  ┆ 0.074316 ┆ 0.072983 ┆ 0.07507  │\n",
-       "│ z_1    ┆ 0.053841 ┆ 0.053643 ┆ 0.052526 ┆ 0.054284 ┆ 0.055234 ┆ 0.053517 │\n",
        "│ x_0    ┆ 0.063883 ┆ 0.063559 ┆ 0.062202 ┆ 0.065506 ┆ 0.063717 ┆ 0.064429 │\n",
+       "│ x_1    ┆ 0.137001 ┆ 0.135529 ┆ 0.135043 ┆ 0.138745 ┆ 0.136518 ┆ 0.139172 │\n",
+       "│ x_2    ┆ 0.232062 ┆ 0.229925 ┆ 0.230675 ┆ 0.232332 ┆ 0.229519 ┆ 0.237857 │\n",
+       "│ x_3    ┆ 0.360112 ┆ 0.356194 ┆ 0.364038 ┆ 0.360692 ┆ 0.353767 ┆ 0.365868 │\n",
+       "│ x_4    ┆ 0.513969 ┆ 0.505727 ┆ 0.519416 ┆ 0.514782 ┆ 0.51125  ┆ 0.518673 │\n",
+       "│ x_5    ┆ 0.690449 ┆ 0.682297 ┆ 0.699715 ┆ 0.688853 ┆ 0.682781 ┆ 0.6986   │\n",
        "│ y_0    ┆ 0.032201 ┆ 0.031942 ┆ 0.031407 ┆ 0.032722 ┆ 0.031838 ┆ 0.033096 │\n",
+       "│ y_1    ┆ 0.073227 ┆ 0.072919 ┆ 0.07085  ┆ 0.074316 ┆ 0.072983 ┆ 0.07507  │\n",
+       "│ y_2    ┆ 0.131989 ┆ 0.129664 ┆ 0.129739 ┆ 0.133781 ┆ 0.131383 ┆ 0.13538  │\n",
+       "│ y_3    ┆ 0.217331 ┆ 0.212352 ┆ 0.216447 ┆ 0.219276 ┆ 0.21536  ┆ 0.22322  │\n",
+       "│ y_4    ┆ 0.334225 ┆ 0.323633 ┆ 0.33419  ┆ 0.337008 ┆ 0.332366 ┆ 0.343928 │\n",
+       "│ y_5    ┆ 0.483314 ┆ 0.466744 ┆ 0.484508 ┆ 0.485832 ┆ 0.479718 ┆ 0.49977  │\n",
        "│ z_0    ┆ 0.025885 ┆ 0.02575  ┆ 0.02534  ┆ 0.026307 ┆ 0.026417 ┆ 0.025612 │\n",
+       "│ z_1    ┆ 0.053841 ┆ 0.053643 ┆ 0.052526 ┆ 0.054284 ┆ 0.055234 ┆ 0.053517 │\n",
+       "│ z_2    ┆ 0.083025 ┆ 0.082469 ┆ 0.080717 ┆ 0.083646 ┆ 0.085575 ┆ 0.082716 │\n",
+       "│ z_3    ┆ 0.113452 ┆ 0.112329 ┆ 0.110431 ┆ 0.113916 ┆ 0.116881 ┆ 0.113704 │\n",
+       "│ z_4    ┆ 0.14516  ┆ 0.143788 ┆ 0.141738 ┆ 0.145386 ┆ 0.149358 ┆ 0.145529 │\n",
+       "│ z_5    ┆ 0.178187 ┆ 0.177243 ┆ 0.174483 ┆ 0.178122 ┆ 0.182591 ┆ 0.178494 │\n",
        "└────────┴──────────┴──────────┴──────────┴──────────┴──────────┴──────────┘"
       ]
      },
@@ -273,7 +273,7 @@
     "\n",
     "train = pl.concat(dfs)\n",
     "clear_output()\n",
-    "display(pl.DataFrame(scores))"
+    "display(pl.DataFrame(scores).sort(\"target\"))"
    ]
   },
   {
