--- a/train/ensemble.ipynb
+++ b/train/ensemble.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,18 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-11-16 09:45:02.447321: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-11-16 09:45:02.474315: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -57,8 +48,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.10/pty.py:89: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
-      "  pid, fd = os.forkpty()\n",
       "set seed: 46\n"
      ]
     },
@@ -67,7 +56,7 @@
      "output_type": "stream",
      "text": [
       "{'cnn': {'execution': {'best_exp_id': 'exp_003',\n",
-      "                       'exp_id': 'exp_003',\n",
+      "                       'exp_id': 'exp_007',\n",
       "                       'seed': 46},\n",
       "         'optimizer': {'lr': 0.01},\n",
       "         'trainer': {'device': 'cuda',\n",
@@ -82,21 +71,24 @@
       "                            'exp_id': 'ensemble_001',\n",
       "                            'seed': 46},\n",
       "              'weights': {'cnn': 0.5, 'xgboost': 0.5}},\n",
+      " 'lightgbm': {'execution': {'best_exp_id': 'exp_007',\n",
+      "                            'exp_id': 'exp_007',\n",
+      "                            'seed': 46},\n",
+      "              'params': {'boosting_type': 'gbdt',\n",
+      "                         'colsample_bytree': 0.7,\n",
+      "                         'learning_rate': 0.025,\n",
+      "                         'max_depth': 7,\n",
+      "                         'min_child_samples': 20,\n",
+      "                         'n_estimators': 1000000,\n",
+      "                         'objective': 'regression_l1',\n",
+      "                         'random_state': 42,\n",
+      "                         'reg_alpha': 0.1,\n",
+      "                         'reg_lambda': 0.1,\n",
+      "                         'subsample': 1.0,\n",
+      "                         'subsample_freq': 0,\n",
+      "                         'verbosity': -1}},\n",
       " 'output_dir': '/kaggle/output/ensemble_001',\n",
-      " 'wandb': {'project': 'atmaCup18'},\n",
-      " 'xgboost': {'execution': {'best_exp_id': 'exp_005',\n",
-      "                           'exp_id': 'exp_005',\n",
-      "                           'seed': 46},\n",
-      "             'params': {'colsample_bytree': 0.7,\n",
-      "                        'learning_rate': 0.025,\n",
-      "                        'max_depth': 7,\n",
-      "                        'n_estimators': 40000,\n",
-      "                        'objective': 'reg:absoluteerror',\n",
-      "                        'random_state': 46,\n",
-      "                        'reg_alpha': 0.1,\n",
-      "                        'reg_lambda': 0.1,\n",
-      "                        'subsample': 1.0,\n",
-      "                        'tree_method': 'gpu_hist'}}}\n"
+      " 'wandb': {'project': 'atmaCup18'}}\n"
      ]
     }
    ],
@@ -123,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,42 +140,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "oof_xgb = pl.read_csv(os.path.join(\"/kaggle/output\", CFG[\"xgboost\"][\"execution\"][\"best_exp_id\"], \"oof.csv\")).sort(\"ID\")\n",
+    "oof_xgb = pl.read_csv(os.path.join(\"/kaggle/output\", CFG[\"lightgbm\"][\"execution\"][\"best_exp_id\"], \"oof.csv\")).sort(\n",
+    "    \"ID\"\n",
+    ")\n",
     "oof_cnn = pl.read_csv(os.path.join(\"/kaggle/output\", CFG[\"cnn\"][\"execution\"][\"best_exp_id\"], \"oof.csv\")).sort(\"ID\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "oof = oof_xgb.clone()\n",
-    "oof = oof.with_columns([oof_xgb[\"oof_\" + c] * 0.7 + oof_cnn[\"oof_\" + c] * 0.3 for c in TARGET_COLS])"
+    "oof = oof.with_columns([oof_xgb[c] * 0.7 + oof_cnn[\"oof_\" + c] * 0.3 for c in TARGET_COLS])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.20898397133028224"
+       "0.20491977361624877"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mae = np.mean(np.abs(train[TARGET_COLS].to_numpy() - oof[[\"oof_\" + c for c in TARGET_COLS]].to_numpy()))\n",
+    "mae = np.mean(np.abs(train[TARGET_COLS].to_numpy() - oof[[c for c in TARGET_COLS]].to_numpy()))\n",
     "mae"
    ]
   },
