--- a/train/ensemble.ipynb
+++ b/train/ensemble.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,9 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-11-18 10:59:04.168293: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-11-18 10:59:04.194580: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -48,6 +57,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/opt/conda/lib/python3.10/pty.py:89: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
+      "  pid, fd = os.forkpty()\n",
       "set seed: 46\n"
      ]
     },
@@ -55,8 +66,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'cnn': {'execution': {'best_exp_id': 'exp_009',\n",
-      "                       'exp_id': 'exp_009',\n",
+      "{'cnn': {'execution': {'best_exp_id': 'exp_011',\n",
+      "                       'exp_id': 'exp_011',\n",
       "                       'seed': 46},\n",
       "         'optimizer': {'lr': 0.01},\n",
       "         'trainer': {'device': 'cuda',\n",
@@ -71,8 +82,8 @@
       "                            'exp_id': 'ensemble_001',\n",
       "                            'seed': 46},\n",
       "              'weights': {'cnn': 0.5, 'xgboost': 0.5}},\n",
-      " 'lightgbm': {'execution': {'best_exp_id': 'exp_008',\n",
-      "                            'exp_id': 'exp_008',\n",
+      " 'lightgbm': {'execution': {'best_exp_id': 'exp_010',\n",
+      "                            'exp_id': 'exp_010',\n",
       "                            'seed': 46},\n",
       "              'params': {'boosting_type': 'gbdt',\n",
       "                         'colsample_bytree': 0.7,\n",
@@ -115,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,26 +163,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "oof = oof_xgb.clone()\n",
-    "oof = oof.with_columns([oof_xgb[c] * 0.6 + oof_cnn[\"oof_\" + c] * 0.4 for c in TARGET_COLS])"
+    "oof = oof.with_columns([oof_xgb[c] * 0.5 + oof_cnn[\"oof_\" + c] * 0.5 for c in TARGET_COLS])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.20102845507975042"
+       "0.19761943391005132"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
