--- a/train/ensemble.ipynb
+++ b/train/ensemble.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "rm: cannot remove '/kaggle/working/*': No such file or directory\n",
       "/kaggle/working\n"
      ]
     }
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,18 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-11-18 15:06:37.285324: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-11-18 15:06:37.312526: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -57,8 +49,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.10/pty.py:89: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
-      "  pid, fd = os.forkpty()\n",
       "set seed: 46\n"
      ]
     },
@@ -66,8 +56,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'cnn': {'execution': {'best_exp_id': 'exp_013',\n",
-      "                       'exp_id': 'exp_013',\n",
+      "{'cnn': {'execution': {'best_exp_id': 'exp_014',\n",
+      "                       'exp_id': 'exp_014',\n",
       "                       'seed': 46},\n",
       "         'optimizer': {'lr': 0.01},\n",
       "         'trainer': {'device': 'cuda',\n",
@@ -126,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,26 +153,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "oof = oof_xgb.clone()\n",
-    "oof = oof.with_columns([oof_xgb[c] * 0.5 + oof_cnn[\"oof_\" + c] * 0.5 for c in TARGET_COLS])"
+    "oof = oof.with_columns([oof_xgb[c] * 0.4 + oof_cnn[\"oof_\" + c] * 0.6 for c in TARGET_COLS])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.19735573494767586"
+       "0.19417323083416654"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
