--- a/input/table_image/gen.ipynb
+++ b/input/table_image/gen.ipynb
@@ -24,7 +24,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(43371, 32)\n"
+      "(45098, 32)\n"
      ]
     },
     {
@@ -76,7 +76,13 @@
     }
    ],
    "source": [
-    "train = pl.read_csv(\"/kaggle/input/atmaCup#18_dataset/train_features.csv\")\n",
+    "train = pl.concat(\n",
+    "    [\n",
+    "        pl.read_csv(\"/kaggle/input/atmaCup#18_dataset/train_features.csv\"),\n",
+    "        pl.read_csv(\"/kaggle/input/atmaCup#18_dataset/test_features.csv\"),\n",
+    "    ],\n",
+    "    how=\"diagonal\",\n",
+    ")\n",
     "train = (\n",
     "    train.with_columns(\n",
     "        pl.col(\"ID\").str.split_exact(\"_\", n=1).struct.rename_fields([\"sceneID\", \"offset\"]).alias(\"fields\")\n",
@@ -106,7 +112,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "43371it [00:01, 39068.23it/s]\n"
+      "45098it [00:01, 35445.07it/s]\n"
      ]
     }
    ],
