--- a/train/ensemble.ipynb
+++ b/train/ensemble.ipynb
@@ -148,17 +148,29 @@
     "oof_xgb = pl.read_csv(os.path.join(\"/kaggle/output\", CFG[\"lightgbm\"][\"execution\"][\"best_exp_id\"], \"oof.csv\")).sort(\n",
     "    \"ID\"\n",
     ")\n",
-    "oof_cnn = pl.read_csv(os.path.join(\"/kaggle/output\", CFG[\"cnn\"][\"execution\"][\"best_exp_id\"], \"oof.csv\")).sort(\"ID\")"
+    "oof_cnn = pl.read_csv(os.path.join(\"/kaggle/output\", CFG[\"cnn\"][\"execution\"][\"best_exp_id\"], \"oof.csv\")).sort(\"ID\")\n",
+    "\n",
+    "oof = oof_xgb.clone()\n",
+    "oof = oof.with_columns([oof_xgb[c] * 0.4 + oof_cnn[c] * 0.6 for c in TARGET_COLS])\n",
+    "oof.write_csv(os.path.join(CFG[\"output_dir\"], \"oof.csv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "oof = oof_xgb.clone()\n",
-    "oof = oof.with_columns([oof_xgb[c] * 0.4 + oof_cnn[\"oof_\" + c] * 0.6 for c in TARGET_COLS])"
+    "sub_xgb = pl.read_csv(\n",
+    "    os.path.join(\"/kaggle/output\", CFG[\"lightgbm\"][\"execution\"][\"best_exp_id\"], \"submission.csv\")\n",
+    ").sort(\"ID\")\n",
+    "sub_cnn = pl.read_csv(os.path.join(\"/kaggle/output\", CFG[\"cnn\"][\"execution\"][\"best_exp_id\"], \"submission.csv\")).sort(\n",
+    "    \"ID\"\n",
+    ")\n",
+    "\n",
+    "sub = sub_xgb.clone()\n",
+    "sub = sub.with_columns([sub_xgb[c] * 0.4 + sub_cnn[c] * 0.6 for c in TARGET_COLS])\n",
+    "sub.to_pandas()[TARGET_COLS].to_csv(os.path.join(CFG[\"output_dir\"], \"submission.csv\"), index=False)"
    ]
   },
   {
@@ -169,7 +181,7 @@
     {
      "data": {
       "text/plain": [
-       "0.19417323083416654"
+       "0.1944046100047766"
       ]
      },
      "execution_count": 24,
