--- a/train/yuki_lgbm.ipynb
+++ b/train/yuki_lgbm.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
     "]\n",
     "\n",
     "# 使う特徴量を指定するより使わない特徴量を指定するほうが試行錯誤が楽\n",
-    "del_columns = targets + [\"ID\", \"scene\", \"gearShifter\"]\n",
+    "del_columns = targets + [\"ID\", \"scene\", \"gearShifter\", \"fold\"]\n",
     "\n",
     "features = list(set(_all_df.columns) - set(del_columns))\n",
     "features.sort()\n",
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,8 +403,8 @@
     "        print(f\"fold{fold}: \", end=\"\")\n",
     "\n",
     "        # TrainとTestに分割\n",
-    "        x_train = train_df.filter(pl.col(\"fold\") != fold).select(features).drop([\"fold\"])\n",
-    "        x_val = train_df.filter(pl.col(\"fold\") == fold).select(features).drop([\"fold\"])\n",
+    "        x_train = train_df.filter(pl.col(\"fold\") != fold).select(features)\n",
+    "        x_val = train_df.filter(pl.col(\"fold\") == fold).select(features)\n",
     "        y_train = train_df.filter(pl.col(\"fold\") != fold).select(target)\n",
     "        y_val = train_df.filter(pl.col(\"fold\") == fold).select(target)\n",
     "\n",
@@ -446,7 +446,7 @@
     "        # oof_pred[test_index] = fold_pred\n",
     "        oof_pred[train_df[\"fold\"].to_numpy() == fold] = fold_pred\n",
     "\n",
-    "        y_pred += model.predict(test.drop([\"fold\"]).to_pandas()) / Config.N_FOLD\n",
+    "        y_pred += model.predict(test.to_pandas()) / Config.N_FOLD\n",
     "\n",
     "        print(f\"{score}\")\n",
     "\n",
