--- a/train/ensemble.ipynb
+++ b/train/ensemble.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rm: cannot remove '/kaggle/working/*': No such file or directory\n",
       "/kaggle/working\n"
      ]
     }
@@ -21,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -72,16 +71,17 @@
       "                            'exp_id': 'ensemble_001',\n",
       "                            'seed': 46},\n",
       "              'weights': {'cnn': 0.5, 'xgboost': 0.5}},\n",
-      " 'lightgbm': {'execution': {'best_exp_id': 'exp_010',\n",
-      "                            'exp_id': 'exp_010',\n",
+      " 'lightgbm': {'execution': {'best_exp_id': 'exp_016',\n",
+      "                            'exp_id': 'exp_016',\n",
       "                            'seed': 46},\n",
       "              'params': {'boosting_type': 'gbdt',\n",
       "                         'colsample_bytree': 0.7,\n",
       "                         'learning_rate': 0.01,\n",
       "                         'max_depth': 7,\n",
+      "                         'metric': 'mae',\n",
       "                         'min_child_samples': 20,\n",
       "                         'n_estimators': 1000000,\n",
-      "                         'objective': 'regression_l1',\n",
+      "                         'objective': 'regression',\n",
       "                         'random_state': 42,\n",
       "                         'reg_alpha': 0.1,\n",
       "                         'reg_lambda': 0.1,\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,22 +169,22 @@
     ")\n",
     "\n",
     "sub = sub_xgb.clone()\n",
-    "sub = sub.with_columns([sub_xgb[c] * 0.4 + sub_cnn[c] * 0.6 for c in TARGET_COLS])\n",
+    "sub = sub.with_columns([sub_xgb[c] * 0.3 + sub_cnn[c] * 0.7 for c in TARGET_COLS])\n",
     "sub.to_pandas()[TARGET_COLS].to_csv(os.path.join(CFG[\"output_dir\"], \"submission.csv\"), index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1944046100047766"
+       "0.19435391961795662"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
